# serializex

./: CMakeLists.txt  README.md
cmake/: SerializeXConfig.cmake.in
src/: CMakeLists.txt
src/include/: SerializeX.hpp
tests/: CMakeLists.txt  SerializeTests.cpp
